manifests/network-policy/bak/allow-all-fos-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-fos-ns
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: nginx
        - namespaceSelector:
            matchLabels:
              name: dvwa
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: nginx
        - namespaceSelector:
            matchLabels:
              name: dvwa
