manifests/network-policy/bak/allow-api-default-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-default-ns
  namespace: default
spec:
  ingress:
  - to:
    - ipBlock:
        cidr: 10.0.0.1/32
  podSelector:
    matchLabels:
      app: devcontainer
  policyTypes:
  - Ingress
